crates/fe/tests/fixtures/cli_output/ingots/invalid_toml_structure/invalid_toml_structure_tree.snap
---
source: crates/fe/tests/cli_output.rs
assertion_line: 528
expression: output
---
=== STDOUT ===
[invalid fe.toml]

=== STDERR ===
Error: Invalid fe.toml in ingot file://<project>/crates/fe/tests/fixtures/cli_output/ingots/invalid_toml_structure/: Failed to parse file://<project>/crates/fe/tests/fixtures/cli_output/ingots/invalid_toml_structure/fe.toml: TOML parse error at line 1, column 7
  |
1 | [ingot
  |       ^
invalid table header
expected `.`, `]`

Error: Failed to parse file://<project>/crates/fe/tests/fixtures/cli_output/ingots/invalid_toml_structure/fe.toml: TOML parse error at line 1, column 7
  |
1 | [ingot
  |       ^
invalid table header
expected `.`, `]`


=== EXIT CODE: 1 ===
